--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,12 +5,14 @@ project:
 book:
   title: "portfolio"
   author: "Fiorella Guillen Hurtado"
-  date: "19/02/2025"
   chapters:
     - index.qmd
-    - intro.qmd
-
-bibliography: references.bib
+    - about.qmd
+    - skills.qmd
+    - projects.qmd
+    - experience.qmd
+    - awards.qmd
+    - contact.qmd
 
 format:
   html:
