--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,8 +3,7 @@ project:
   output-dir: docs
 
 book:
-  title: "portfolio"
-  author: "Fiorella Guillen Hurtado"
+  title: "Fiorella's portfolio"
   chapters:
     - index.qmd
     - about.qmd
